--- a/index.html
+++ b/index.html
@@ -3,88 +3,113 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهنئة رمضان</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
+<title>وحدة الرياض للتجارة</title>
+
 <style>
 body{
-font-family:'Cairo',sans-serif;
-background:linear-gradient(135deg,#0c1a2b,#0f3a5f);
-display:flex;
-align-items:center;
-justify-content:center;
-height:100vh;
-margin:0;
-color:white;
-text-align:center;
+    margin:0;
+    font-family:Tahoma;
+    background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
 }
+
 .box{
-background:rgba(255,255,255,0.05);
-padding:40px;
-border-radius:20px;
-backdrop-filter:blur(10px);
-box-shadow:0 0 40px rgba(0,0,0,0.3);
-width:90%;
-max-width:420px;
+    background:rgba(255,255,255,0.08);
+    backdrop-filter:blur(10px);
+    padding:40px;
+    border-radius:18px;
+    width:350px;
+    text-align:center;
+    box-shadow:0 0 25px rgba(0,0,0,0.4);
 }
-input{
-width:90%;
-padding:12px;
-border-radius:10px;
-border:none;
-margin-top:15px;
-font-size:16px;
-text-align:center;
-}
-button{
-margin-top:15px;
-padding:12px 25px;
-border:none;
-border-radius:10px;
-background:#00bcd4;
-color:white;
-font-size:16px;
-cursor:pointer;
-}
-button:hover{background:#0097a7;}
-.card{
-display:none;
-background:white;
-color:#0c1a2b;
-padding:30px;
-border-radius:20px;
-margin-top:20px;
-}
+
 .logo{
-width:120px;
-margin-bottom:15px;
+    width:90px;
+    margin-bottom:15px;
 }
-h2{margin:5px 0;}
+
+h1{
+    margin:10px 0;
+    font-size:22px;
+}
+
+input{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:10px;
+    margin-top:20px;
+    font-size:16px;
+    outline:none;
+}
+
+button{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:10px;
+    margin-top:15px;
+    font-size:16px;
+    cursor:pointer;
+    font-weight:bold;
+}
+
+.save{
+    background:#00c6ff;
+    color:white;
+}
+
+.whatsapp{
+    background:#25D366;
+    color:white;
+}
+
+.footer{
+    margin-top:15px;
+    font-size:12px;
+    opacity:0.7;
+}
 </style>
 </head>
 
 <body>
-<div class="box">
-<h2>تهنئة رمضان</h2>
-<input id="name" placeholder="اكتب اسمك هنا">
-<br>
-<button onclick="make()">إنشاء التهنئة</button>
 
-<div class="card" id="card">
+<div class="box">
+
 <img src="Logo.jpg" class="logo">
-<h2>شركة وحدة الرياض للتجارة</h2>
-<p>تهنئكم بحلول شهر رمضان المبارك</p>
-<p>تقبل الله منا ومنكم صالح الأعمال</p>
-<h3 id="from"></h3>
+
+<h1>وحدة الرياض للتجارة</h1>
+<p>تسجيل بيانات العميل</p>
+
+<input type="text" id="name" placeholder="اكتب اسم العميل">
+
+<button class="save" onclick="saveText()">💾 حفظ النص</button>
+<button class="whatsapp" onclick="sendWhats()">📲 فتح واتساب</button>
+
+<div class="footer">
+تصميم خاص بالشركة
 </div>
+
 </div>
 
 <script>
-function make(){
-let n=document.getElementById("name").value;
-if(n===""){alert("اكتب اسمك");return;}
-document.getElementById("from").innerHTML="من: "+n;
-document.getElementById("card").style.display="block";
+function saveText(){
+let text = document.getElementById("name").value;
+localStorage.setItem("clientName", text);
+alert("تم الحفظ بنجاح");
+}
+
+function sendWhats(){
+let text = document.getElementById("name").value;
+let message = "عميل جديد:\n" + text;
+let url = "https://wa.me/?text=" + encodeURIComponent(message);
+window.open(url,"_blank");
 }
 </script>
+
 </body>
 </html>
