--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+"}
 <!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهنئة رمضان | وحدة الرياض للتجارة</title>
+<title>تهنئة رمضان</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
-font-family:Tajawal, Arial;
+font-family:'Cairo',sans-serif;
 background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 height:100vh;
 display:flex;
@@ -20,36 +23,27 @@ color:white;
 .box{
 background:rgba(255,255,255,0.08);
 backdrop-filter:blur(15px);
-padding:40px;
-border-radius:20px;
-width:380px;
+padding:35px;
+border-radius:25px;
+width:350px;
 text-align:center;
-box-shadow:0 0 40px rgba(0,0,0,0.4);
+box-shadow:0 15px 50px rgba(0,0,0,0.5);
+animation:fade 1s;
 }
 
-.logo{
-width:120px;
-margin-bottom:15px;
-}
-
-h2{
-margin:5px 0;
-font-size:26px;
-}
-
-p{
-opacity:.8;
-margin-bottom:20px;
+@keyframes fade{
+from{opacity:0;transform:translateY(30px)}
+to{opacity:1;transform:translateY(0)}
 }
 
 input{
 width:100%;
 padding:14px;
-border:none;
 border-radius:12px;
-font-size:18px;
+border:none;
+font-size:16px;
+margin-top:20px;
 text-align:center;
-margin-bottom:15px;
 }
 
 button{
@@ -57,8 +51,8 @@ width:100%;
 padding:14px;
 border:none;
 border-radius:12px;
-font-size:18px;
-margin-top:10px;
+font-size:16px;
+margin-top:12px;
 cursor:pointer;
 font-weight:bold;
 }
@@ -69,32 +63,34 @@ color:white;
 }
 
 .save{
-background:linear-gradient(45deg,#00b09b,#96c93d);
+background:linear-gradient(45deg,#00ff87,#00c853);
+display:none;
 color:white;
 }
 
 .whatsapp{
-background:linear-gradient(45deg,#25D366,#128C7E);
+background:linear-gradient(45deg,#25d366,#128c7e);
+display:none;
 color:white;
 }
 
 .card{
-margin-top:20px;
-background:linear-gradient(135deg,#1e3c72,#2a5298);
-padding:25px;
-border-radius:18px;
 display:none;
+margin-top:20px;
+padding:25px;
+border-radius:20px;
+background:linear-gradient(135deg,#1e3c72,#2a5298);
 }
 
-.card h3{
-margin:10px 0;
-font-size:26px;
+.logo{
+width:90px;
+margin-bottom:10px;
 }
 
 .footer{
-margin-top:15px;
-font-size:12px;
-opacity:.6;
+margin-top:10px;
+font-size:13px;
+opacity:.7;
 }
 </style>
 </head>
@@ -103,38 +99,39 @@ opacity:.6;
 
 <div class="box" id="capture">
 
-<img src="Logo.jpg" class="logo">
-
-<h2>وحدة الرياض للتجارة</h2>
-<p>اكتب اسمك واطبع التهنئة</p>
-
-<input type="text" id="name" placeholder="اكتب اسمك هنا">
-
+<h2>تهنئة رمضان</h2>
+<input type="text" id="name" placeholder="اكتب اسمك">
 <button class="show" onclick="showCard()">عرض التهنئة</button>
 
 <div class="card" id="card">
-<h3>🌙 رمضان مبارك</h3>
+<img src="Logo.jpg" class="logo">
+<h2>🌙 رمضان مبارك</h2>
 <h2 id="clientName"></h2>
 <p>تتمنى لكم وحدة الرياض للتجارة شهراً مباركاً</p>
 </div>
 
-<button class="save" onclick="saveImage()">📸 حفظ كصورة</button>
-<button class="whatsapp" onclick="sendWhats()">📲 مشاركة واتساب</button>
+<button class="save" id="saveBtn" onclick="downloadImage()">📸 حفظ كصورة</button>
+<button class="whatsapp" id="waBtn" onclick="sendWhats()">📲 مشاركة واتساب</button>
 
 <div class="footer">تصميم خاص بالشركة</div>
 
 </div>
 
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
 <script>
 function showCard(){
 let name=document.getElementById("name").value;
 if(name===""){alert("اكتب الاسم");return;}
+
 document.getElementById("clientName").innerText=name;
 document.getElementById("card").style.display="block";
+document.getElementById("saveBtn").style.display="block";
+document.getElementById("waBtn").style.display="block";
 }
 
-function saveImage(){
-html2canvas(document.querySelector("#capture")).then(canvas=>{
+function downloadImage(){
+html2canvas(document.getElementById("capture")).then(canvas=>{
 let link=document.createElement("a");
 link.download="ramadan.png";
 link.href=canvas.toDataURL();
@@ -144,14 +141,11 @@ link.click();
 
 function sendWhats(){
 let name=document.getElementById("name").value;
-if(name===""){alert("اكتب الاسم");return;}
-let msg=`رمضان مبارك 🌙\n${name}\nمن وحدة الرياض للتجارة`;
-let url="https://wa.me/?text="+encodeURIComponent(msg);
+let text="رمضان مبارك 🌙 "+name+" من وحدة الرياض للتجارة";
+let url="https://wa.me/?text="+encodeURIComponent(text);
 window.open(url,"_blank");
 }
 </script>
 
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-
 </body>
-</html>
+</h
