--- a/index.html
+++ b/index.html
@@ -1,48 +1,41 @@
-"}
 <!DOCTYPE html>
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهنئة رمضان</title>
+<title>تهنئة رمضان | وحدة الرياض للتجارة</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <style>
 body{
 margin:0;
-font-family:'Cairo',sans-serif;
-background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+font-family:Tahoma;
+background:linear-gradient(135deg,#0f2e4d,#0a5c8f);
 height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-color:white;
+color:#fff;
 }
 
-.box{
+.container{
 background:rgba(255,255,255,0.08);
+padding:30px;
+border-radius:20px;
 backdrop-filter:blur(15px);
-padding:35px;
-border-radius:25px;
-width:350px;
+width:340px;
 text-align:center;
-box-shadow:0 15px 50px rgba(0,0,0,0.5);
-animation:fade 1s;
-}
-
-@keyframes fade{
-from{opacity:0;transform:translateY(30px)}
-to{opacity:1;transform:translateY(0)}
+box-shadow:0 20px 40px rgba(0,0,0,.3);
 }
 
 input{
 width:100%;
-padding:14px;
-border-radius:12px;
+padding:15px;
 border:none;
+border-radius:12px;
+margin-bottom:15px;
 font-size:16px;
-margin-top:20px;
 text-align:center;
 }
 
@@ -52,100 +45,115 @@ padding:14px;
 border:none;
 border-radius:12px;
 font-size:16px;
-margin-top:12px;
+margin-top:10px;
 cursor:pointer;
-font-weight:bold;
 }
 
 .show{
 background:linear-gradient(45deg,#00c6ff,#0072ff);
-color:white;
+color:#fff;
 }
 
 .save{
-background:linear-gradient(45deg,#00ff87,#00c853);
+background:linear-gradient(45deg,#1fd655,#00b33c);
+color:#fff;
 display:none;
-color:white;
-}
-
-.whatsapp{
-background:linear-gradient(45deg,#25d366,#128c7e);
-display:none;
-color:white;
 }
 
 .card{
 display:none;
 margin-top:20px;
-padding:25px;
-border-radius:20px;
-background:linear-gradient(135deg,#1e3c72,#2a5298);
+}
+
+.design{
+width:360px;
+height:640px;
+background:linear-gradient(180deg,#ffffff,#e8f1ff);
+border-radius:25px;
+padding:40px 20px;
+text-align:center;
+position:relative;
+color:#0b3a75;
+box-shadow:0 15px 40px rgba(0,0,0,.4);
 }
 
 .logo{
-width:90px;
-margin-bottom:10px;
+width:150px;
+margin-bottom:20px;
 }
 
-.footer{
+.title{
+font-size:36px;
+font-weight:bold;
+margin:20px 0;
+}
+
+.text{
+font-size:18px;
 margin-top:10px;
-font-size:13px;
-opacity:.7;
+line-height:1.8;
+}
+
+.name{
+font-size:32px;
+margin-top:25px;
+font-weight:bold;
+color:#0072ff;
 }
 </style>
 </head>
 
 <body>
 
-<div class="box" id="capture">
+<div class="container">
+<h2>اكتب اسمك</h2>
 
-<h2>تهنئة رمضان</h2>
-<input type="text" id="name" placeholder="اكتب اسمك">
+<input type="text" id="name" placeholder="اكتب اسمك هنا">
+
 <button class="show" onclick="showCard()">عرض التهنئة</button>
+<button class="save" id="saveBtn" onclick="saveImage()">حفظ كصورة</button>
 
 <div class="card" id="card">
+
+<div class="design" id="design">
+
 <img src="Logo.jpg" class="logo">
-<h2>🌙 رمضان مبارك</h2>
-<h2 id="clientName"></h2>
-<p>تتمنى لكم وحدة الرياض للتجارة شهراً مباركاً</p>
+
+<div class="title">رمضان مبارك 🌙</div>
+
+<div class="text">
+تتمنى لكم وحدة الرياض للتجارة شهراً مباركاً<br>
+وكل عام وأنتم بخير
 </div>
 
-<button class="save" id="saveBtn" onclick="downloadImage()">📸 حفظ كصورة</button>
-<button class="whatsapp" id="waBtn" onclick="sendWhats()">📲 مشاركة واتساب</button>
-
-<div class="footer">تصميم خاص بالشركة</div>
+<div class="name" id="personName"></div>
 
 </div>
+</div>
 
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+</div>
 
 <script>
 function showCard(){
 let name=document.getElementById("name").value;
-if(name===""){alert("اكتب الاسم");return;}
-
-document.getElementById("clientName").innerText=name;
+if(name===""){
+alert("اكتب الاسم");
+return;
+}
+document.getElementById("personName").innerText=name;
 document.getElementById("card").style.display="block";
 document.getElementById("saveBtn").style.display="block";
-document.getElementById("waBtn").style.display="block";
 }
 
-function downloadImage(){
-html2canvas(document.getElementById("capture")).then(canvas=>{
+function saveImage(){
+html2canvas(document.getElementById("design")).then(canvas=>{
 let link=document.createElement("a");
-link.download="ramadan.png";
+link.download="ramadan-card.png";
 link.href=canvas.toDataURL();
 link.click();
 });
 }
-
-function sendWhats(){
-let name=document.getElementById("name").value;
-let text="رمضان مبارك 🌙 "+name+" من وحدة الرياض للتجارة";
-let url="https://wa.me/?text="+encodeURIComponent(text);
-window.open(url,"_blank");
-}
 </script>
 
 </body>
-</h
+</html
