--- a/index.html
+++ b/index.html
@@ -3,157 +3,177 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهنئة رمضان | وحدة الرياض للتجارة</title>
-
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<title>تهنئة رمضان - وحدة الرياض للتجارة</title>
 
 <style>
 body{
 margin:0;
-font-family:Tahoma;
-background:linear-gradient(135deg,#0f2e4d,#0a5c8f);
+font-family:Tajawal, Arial;
+background:linear-gradient(135deg,#0a2540,#123d6b);
 height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-color:#fff;
+color:white;
 }
 
-.container{
+/* صندوق البداية */
+.startBox{
 background:rgba(255,255,255,0.08);
-padding:30px;
+padding:40px;
 border-radius:20px;
-backdrop-filter:blur(15px);
-width:340px;
 text-align:center;
-box-shadow:0 20px 40px rgba(0,0,0,.3);
+backdrop-filter:blur(10px);
+width:350px;
 }
 
 input{
-width:100%;
+width:90%;
 padding:15px;
+border-radius:10px;
 border:none;
-border-radius:12px;
-margin-bottom:15px;
-font-size:16px;
+margin-top:15px;
+font-size:18px;
 text-align:center;
 }
 
 button{
-width:100%;
-padding:14px;
+margin-top:15px;
+padding:15px;
+width:90%;
 border:none;
 border-radius:12px;
-font-size:16px;
-margin-top:10px;
+font-size:18px;
 cursor:pointer;
 }
 
-.show{
-background:linear-gradient(45deg,#00c6ff,#0072ff);
-color:#fff;
+.showBtn{
+background:#0ea5e9;
+color:white;
 }
 
-.save{
-background:linear-gradient(45deg,#1fd655,#00b33c);
-color:#fff;
-display:none;
+.saveBtn{
+background:#22c55e;
+color:white;
 }
 
+.whatsBtn{
+background:#25D366;
+color:white;
+}
+
+/* بطاقة التهنئة */
 .card{
 display:none;
 margin-top:20px;
 }
 
-.design{
-width:360px;
-height:640px;
-background:linear-gradient(180deg,#ffffff,#e8f1ff);
+.ramadanDesign{
+width:500px;
+height:500px;
+background:white;
 border-radius:25px;
-padding:40px 20px;
+padding:40px;
+color:#123d6b;
 text-align:center;
 position:relative;
-color:#0b3a75;
-box-shadow:0 15px 40px rgba(0,0,0,.4);
 }
 
 .logo{
-width:150px;
-margin-bottom:20px;
+width:200px;
+margin-bottom:25px;
 }
 
 .title{
-font-size:36px;
+font-size:28px;
 font-weight:bold;
-margin:20px 0;
+margin-bottom:15px;
 }
 
 .text{
-font-size:18px;
-margin-top:10px;
+font-size:20px;
 line-height:1.8;
 }
 
 .name{
-font-size:32px;
-margin-top:25px;
+margin-top:30px;
+font-size:28px;
 font-weight:bold;
-color:#0072ff;
+color:#0a2540;
+}
+
+.footer{
+margin-top:10px;
+font-size:14px;
+color:#777;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
-<h2>اكتب اسمك</h2>
+<div class="startBox">
 
-<input type="text" id="name" placeholder="اكتب اسمك هنا">
+<h2>تهنئة رمضان</h2>
+<input type="text" id="name" placeholder="اكتب الاسم هنا">
 
-<button class="show" onclick="showCard()">عرض التهنئة</button>
-<button class="save" id="saveBtn" onclick="saveImage()">حفظ كصورة</button>
+<button class="showBtn" onclick="showCard()">عرض التهنئة</button>
 
-<div class="card" id="card">
+<div class="card" id="cardSection">
 
-<div class="design" id="design">
+<div class="ramadanDesign" id="capture">
 
-<img src="Logo.jpg" class="logo">
-
-<div class="title">رمضان مبارك 🌙</div>
+<img src="Logo.png" class="logo">
 
 <div class="text">
-تتمنى لكم وحدة الرياض للتجارة شهراً مباركاً<br>
-وكل عام وأنتم بخير
+وحدة الرياض للتجارة<br>
+تتقدم إليكم بأصدق التهاني والتبريكات<br>
+بمناسبة حلول شهر رمضان المبارك<br>
+كل عام وأنتم بخير
 </div>
 
 <div class="name" id="personName"></div>
 
+<div class="footer">Ramadan Kareem</div>
+
+</div>
+
+<button class="saveBtn" onclick="saveImage()">📸 حفظ كصورة</button>
+<button class="whatsBtn" onclick="shareWhats()">📲 مشاركة واتساب</button>
+
 </div>
 </div>
 
-</div>
+<!-- مكتبة تصوير -->
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <script>
 function showCard(){
 let name=document.getElementById("name").value;
-if(name===""){
+if(name==""){
 alert("اكتب الاسم");
 return;
 }
 document.getElementById("personName").innerText=name;
-document.getElementById("card").style.display="block";
-document.getElementById("saveBtn").style.display="block";
+document.getElementById("cardSection").style.display="block";
 }
 
 function saveImage(){
-html2canvas(document.getElementById("design")).then(canvas=>{
+html2canvas(document.getElementById("capture")).then(canvas=>{
 let link=document.createElement("a");
-link.download="ramadan-card.png";
+link.download="ramadan.png";
 link.href=canvas.toDataURL();
 link.click();
 });
 }
+
+function shareWhats(){
+let name=document.getElementById("name").value;
+let msg="رمضان مبارك 🌙\n"+name+"\nمن وحدة الرياض للتجارة";
+let url="https://wa.me/?text="+encodeURIComponent(msg);
+window.open(url,"_blank");
+}
 </script>
 
 </body>
-</html
+</html>
