--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ color:#777;
 
 <div class="ramadanDesign" id="capture">
 
-<img src="Logo.png" class="logo">
+<img src="Logo.jpg" class="logo">
 
 <div class="text">
 وحدة الرياض للتجارة<br>
