--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ color:#888;
 
 <div class="lanternLeft"></div>
 
-<img src="Logo.png" class="logo">
+<img src="Logo.jpg" class="logo">
 
 <div class="text">
 وحدة الرياض للتجارة<br>
