--- a/index.html
+++ b/index.html
@@ -150,6 +150,70 @@ color:#0a2540;
 margin-top:10px;
 font-size:14px;
 color:#888;
+}/* فوانيس يمين ويسار */
+.ramadanDesign:before,
+.ramadanDesign:after{
+content:"";
+position:absolute;
+top:-30px;
+width:80px;
+height:160px;
+background:url('https://i.imgur.com/6X4K0bQ.png') no-repeat center;
+background-size:contain;
+opacity:0.9;
+}
+
+.ramadanDesign:before{
+left:-40px;
+animation:float1 3s ease-in-out infinite;
+}
+
+.ramadanDesign:after{
+right:-40px;
+animation:float2 3s ease-in-out infinite;
+}
+
+/* حركة الفوانيس */
+@keyframes float1{
+0%{transform:translateY(0)}
+50%{transform:translateY(10px)}
+100%{transform:translateY(0)}
+}
+
+@keyframes float2{
+0%{transform:translateY(10px)}
+50%{transform:translateY(0)}
+100%{transform:translateY(10px)}
+}
+
+/* نجوم رمضان */
+body:before{
+content:"";
+position:fixed;
+width:100%;
+height:100%;
+background:url('https://i.imgur.com/9QZ7Q9H.png');
+opacity:0.15;
+pointer-events:none;
+}
+  /* الفوانيس */
+.lantern{
+position:fixed;
+width:90px;
+z-index:1;
+animation:float 4s ease-in-out infinite;
+opacity:0.95;
+}
+
+.l1{top:40px; left:60px;}
+.l2{top:80px; right:70px; animation-delay:1s;}
+.l3{bottom:80px; left:80px; animation-delay:2s;}
+.l4{bottom:60px; right:60px; animation-delay:3s;}
+
+@keyframes float{
+0%{transform:translateY(0)}
+50%{transform:translateY(15px)}
+100%{transform:translateY(0)}
 }
 </style>
 </head>
@@ -219,6 +283,11 @@ let url="https://wa.me/?text="+encodeURIComponent(msg);
 window.open(url,"_blank");
 }
 </script>
-
+<!-- فوانيس رمضان -->
+<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l1">
+<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l2">
+<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l3">
+<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l4">
+  
 </body>
 </html>
