--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ top:0;
 right:0;
 width:120px;
 height:100%;
-background:url("https://i.imgur.com/M9bGz6A.png") repeat-y;
+background:url('https://i.ibb.co/2k3Qw6S/ramadan-pattern.png'); repeat-y;
 background-size:100px;
 opacity:0.15;
 }
@@ -284,10 +284,10 @@ window.open(url,"_blank");
 }
 </script>
 <!-- فوانيس رمضان -->
-<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l1">
-<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l2">
-<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l3">
-<img src="https://i.imgur.com/7QZ7Q0F.png" class="lantern l4">
+<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l1">
+<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l2">
+<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l3">
+<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l4">
   
 </body>
 </html>
