--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@ window.open(url,"_blank");
 }
 </script>
 <!-- فوانيس رمضان -->
-<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l1">
-<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l2">
-<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l3">
-<img src="https://i.ibb.co/ZX3W0rK/lantern.png" class="lantern l4">
+<img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" class="lantern l1">
+<img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" class="lantern l2">
+<img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" class="lantern l3">
+<img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" class="lantern l4">
   
 </body>
 </html>
