--- a/index.html
+++ b/index.html
@@ -135,11 +135,10 @@ opacity:0.95;
 <div class="ramadanDesign" id="capture">
 
 <!-- الفوانيس -->
-<img src="https://i.ibb.co/2q6D4h0/lantern.png" class="lantern l1">
-<img src="https://i.ibb.co/2q6D4h0/lantern.png" class="lantern l2">
-<img src="https://i.ibb.co/2q6D4h0/lantern.png" class="lantern l3">
-<img src="https://i.ibb.co/2q6D4h0/lantern.png" class="lantern l4">
-
+<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l1">
+<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l2">
+<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l3">
+<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l4">
 <!-- الشعار -->
 <img src="Logo.jpg" class="logo">
 
