--- a/index.html
+++ b/index.html
@@ -47,27 +47,16 @@ font-size:18px;
 cursor:pointer;
 }
 
-.showBtn{
-background:#0ea5e9;
-color:white;
-}
+.showBtn{background:#0ea5e9;color:white;}
+.saveBtn{background:#22c55e;color:white;}
+.whatsBtn{background:#25D366;color:white;}
 
-.saveBtn{
-background:#22c55e;
-color:white;
-}
-
-.whatsBtn{
-background:#25D366;
-color:white;
-}
-
-/* بطاقة التهنئة */
 .card{
 display:none;
 margin-top:20px;
 }
 
+/* بطاقة التهنئة */
 .ramadanDesign{
 width:500px;
 height:500px;
@@ -78,23 +67,24 @@ color:#123d6b;
 text-align:center;
 position:relative;
 overflow:hidden;
-box-shadow:0 20px 60px rgba(0,0,0,0.25);
+box-shadow:0 25px 60px rgba(0,0,0,0.35);
 }
 
-/* شعار */
+/* الشعار */
 .logo{
 width:220px;
-margin-bottom:25px;
+margin-bottom:20px;
 }
 
-/* نص */
+/* النص */
 .text{
 font-size:20px;
 line-height:1.9;
+margin-top:10px;
 }
 
 .name{
-margin-top:30px;
+margin-top:25px;
 font-size:30px;
 font-weight:bold;
 color:#0a2540;
@@ -106,18 +96,23 @@ font-size:14px;
 color:#888;
 }
 
-/* الفوانيس */
-.lantern{
+/* الفانوس يمين */
+.fanous-right{
 position:absolute;
-width:90px;
-opacity:0.95;
+top:-25px;
+right:-10px;
+width:170px;
+pointer-events:none;
 }
 
-.l1{top:-20px; left:-20px;}
-.l2{top:-20px; right:-20px;}
-.l3{bottom:-20px; left:-20px;}
-.l4{bottom:-20px; right:-20px;}
-
+/* الفانوس يسار */
+.fanous-left{
+position:absolute;
+top:-25px;
+left:-10px;
+width:170px;
+pointer-events:none;
+}
 </style>
 </head>
 
@@ -126,7 +121,7 @@ opacity:0.95;
 <div class="startBox">
 
 <h2>🌙 تهنئة رمضان</h2>
-<input type="text" id="name" placeholder="اكتب اسم الشخص">
+<input type="text" id="name" placeholder="اكتب الاسم هنا">
 
 <button class="showBtn" onclick="showCard()">عرض التهنئة</button>
 
@@ -135,12 +130,11 @@ opacity:0.95;
 <div class="ramadanDesign" id="capture">
 
 <!-- الفوانيس -->
-<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l1">
-<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l2">
-<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l3">
-<img src="https://cdn-icons-png.flaticon.com/512/2972/2972185.png" class="lantern l4">
+<img src="fanous-right.png" class="fanous-right">
+<img src="fanous-left.png" class="fanous-left">
+
 <!-- الشعار -->
-<img src="Logo.jpg" class="logo">
+<img src="Logo.png" class="logo">
 
 <div class="text">
 وحدة الرياض للتجارة<br>
@@ -150,7 +144,6 @@ opacity:0.95;
 </div>
 
 <div class="name" id="personName"></div>
-
 <div class="footer">Ramadan Kareem</div>
 
 </div>
@@ -185,7 +178,7 @@ link.click();
 
 function shareWhats(){
 let name=document.getElementById("name").value;
-let msg="🌙 رمضان مبارك\n"+name+"\nمن وحدة الرياض للتجارة";
+let msg="رمضان مبارك 🌙\n"+name+"\nمن وحدة الرياض للتجارة";
 let url="https://wa.me/?text="+encodeURIComponent(msg);
 window.open(url,"_blank");
 }
