--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ pointer-events:none;
 <img src="fanous-left.png" class="fanous-left">
 
 <!-- الشعار -->
-<img src="Logo.png" class="logo">
+<img src="Logo.jpg" class="logo">
 
 <div class="text">
 وحدة الرياض للتجارة<br>
