--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ box-shadow:0 0 40px rgba(0,0,0,0.4);
 position:absolute;
 top:25px;
 right:25px;
-width:120px;
+width:140px;
+height:auto;
+object-fit:contain;
 }
 
 / رمضان مبارك /
